log
Sat, Apr 19, 2025  1:17:03 PM: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
eeef3b7
Sat, Apr 19, 2025  1:31:05 PM: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:45:5: error: expected ',' or ';' before 'do'
     do {
     ^~
e3dd6a7
Sat, Apr 19, 2025  1:33:17 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
5426905
Sat, Apr 19, 2025  1:34:07 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6e1a12c
Sat, Apr 19, 2025  1:42:15 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
3e4a47a
Sat, Apr 19, 2025  2:00:04 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:70:9: error: expected ';' before '}' token
         }
         ^
5f7c7cd
Sat, Apr 19, 2025  2:00:17 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b75df1c
